# fireflyiii-enricher-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: pylint.yml  python-package.yml  release.yml
examples/: .env.example  min_add_tags.py  min_update_category.py  min_update_desc.py  min_update_notes.py  min_usage_search.py  minimal_usage.py  release.yml
fireflyiii_enricher_core/: __init__.py  firefly_client.py  matcher.py  processor.py
requests/: __init__.py
tests/: __init__.py  test_client.py
