[project]
name = "fireflyiii-enricher-core"
version = "0.6.1"
description = "A core library for enriching Firefly III transactions"
authors = [{ name = "wini83", email = "rico.gotti@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "requests",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "ruff",
    "mypy",
    "types-requests"
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.6.1"
tag_format = "v$version"
version_files = ["pyproject.toml"]
update_changelog_on_bump = true

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["build"]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["E", "F", "I", "N"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"fireflyiii_enricher_core" = ["py.typed"]
