[metadata]
name = fireflyiii-enricher-core
version = 0.1.0
author = Your Name
description = Core logic for enriching Firefly III data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourname/fireflyiii-enricher-core
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests
    python-dotenv
    tabulate
    firefly-iii-client

[options.packages.find]
where = fireflyiii_enricher_core
